Add Event list page and routing

--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -59,6 +59,7 @@
       </mat-form-field>
 
       <mat-card-actions align="end">
+        <button mat-button (click)="router.navigateByUrl('')">BACK</button>
         <button mat-button (click)="submit()">SUBMIT</button>
       </mat-card-actions>
     </form>
