revert logo changes and changed background color

--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,5 +1,5 @@
 <div class="form-container bg">
-  <img src="assets/momentus.svg" alt="Momentus-Technologies"
+  <img src="assets/momentus_technologies.svg" alt="Momentus-Technologies"
   class="momentus-tech-logo">
   <mat-card>
     <mat-card-header>
