--- a/src/app/event/event.component.scss
+++ b/src/app/event/event.component.scss
@@ -19,7 +19,7 @@
   }
 }
 .bg {
-  background-color: #f2eeec !important;
+  background-color: #000 !important;
   height: 100vh;
 }
 .momentus-tech-logo {
