--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+$primary-color: #673ab7;
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+  background-color: whitesmoke;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+.momentus-tech-logo {
+  position: absolute;
+  width: 15%;
+  top: 30px;
+  left: 30px;
+}
+.bg {
+  background-image: linear-gradient(#090a20, #1c1e61);
+  height: 100vh;
+}
+.mat-mdc-snack-bar-container .mdc-snackbar__surface {
+  background-color: white !important;
+}
+.mat-mdc-snack-bar-container .mdc-snackbar__label {
+  color: black !important;
+}
