--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -21,7 +21,7 @@
         >
           <mat-icon>close</mat-icon>
         </button>
-        <!-- <mat-error *ngIf="form.get('eventName')?.errors">Please enter a valid email address</mat-error> -->
+        <mat-error *ngIf="form.get('eventName')?.errors?.['required']">Event Name is required</mat-error>
       </mat-form-field>
 
       <mat-form-field class="example-form-field">
@@ -31,6 +31,7 @@
             item.viewValue
           }}</mat-option>
         </mat-select>
+        <mat-error *ngIf="form.get('eventName')?.errors?.['required']">Event Name is required</mat-error>
       </mat-form-field>
 
       <mat-form-field class="example-form-field">
