--- a/src/app/snackbar/snackbar.component.html
+++ b/src/app/snackbar/snackbar.component.html
@@ -1,3 +1,3 @@
 <div class="snackbar-container">
-  <span matSnackBarLabel>Event Added Successfully.</span>
+  <span matSnackBarLabel>Successful</span>
 </div>
